--- a/css/global.css
+++ b/css/global.css
@@ -79,6 +79,15 @@ a {
   font-size: 1.5rem;
 }
 
+@media (min-width: 700px) {
+  .title {
+    font-size: 6rem;
+  }
+  .description {
+    font-size: 2rem;
+  }
+}
+
 code {
   background: #fafafa;
   border-radius: 5px;
