--- a/css/global.css
+++ b/css/global.css
@@ -88,6 +88,18 @@ a {
   }
 }
 
+@media (min-width: 900px) {
+  .title {
+    font-size: 8rem;
+  }
+}
+
+@media (min-width: 1100px) {
+  .title {
+    font-size: 10rem;
+  }
+}
+
 code {
   background: #fafafa;
   border-radius: 5px;
