--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,7 @@
 html,
 body {
+  color: #EEE;
+  background: #111;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
