Add background image.

--- a/css/index.module.css
+++ b/css/index.module.css
@@ -43,12 +43,15 @@
     color: rgb(255, 166, 0);
   }
   60% {
-    color: rgb(164, 182, 0);
+    color: rgb(30, 182, 0);
   }
   80% {
     color: rgb(0, 118, 228);
   }
   90% {
     color: rgb(158, 0, 0);
+  }
+  100% {
+    color: rgb(148, 17, 148);
   }
 }
